fix build linux